--- a/Session_2_Containers_and_Functions(2).ipynb
+++ b/Session_2_Containers_and_Functions(2).ipynb
@@ -96,7 +96,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7187dd56-b448-44ed-9d5e-599d33d941d0"
+        "outputId": "625740ac-9a1d-48ce-a272-4c24360c8f63"
       },
       "execution_count": 2,
       "outputs": [
@@ -129,7 +129,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m_W0EkTqnMiQ",
-        "outputId": "cee27d19-ba71-4259-d2c2-5eb795ad1c52"
+        "outputId": "086791c6-8804-4a3a-cfce-f5db8f92b1cb"
       },
       "execution_count": 3,
       "outputs": [
@@ -162,7 +162,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6cb90f37-979c-4440-c1e8-c1a31ed9b96c"
+        "outputId": "36ac178f-37f7-45e9-85ae-86c005412f90"
       },
       "execution_count": 4,
       "outputs": [
@@ -207,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YOfpYcKEloGa",
-        "outputId": "23abcc5b-25d1-432a-8e95-3c5b4119d9e4"
+        "outputId": "a923f801-9953-4648-d95c-197532120af0"
       },
       "execution_count": 5,
       "outputs": [
@@ -244,9 +244,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "73c8dbe0-dca5-450b-966f-589005372336"
+        "outputId": "44103f80-4b69-40be-f701-a2dd69845683"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,9 +281,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f019316a-62f9-433b-aed2-c4c464382484"
+        "outputId": "5ce35df0-d37c-41ee-e6c1-aab959fa8810"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,9 +314,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "156474a5-43e5-4aa8-d227-a97909dff8b1"
+        "outputId": "e86be56f-5a71-4d39-e6a4-40da205c5f65"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,9 +346,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6d9249b4-e7d9-4179-84d5-a9193b8d2a09"
+        "outputId": "5d270976-73fa-499a-a745-37f3c1e651b6"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,9 +378,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aiVvkDYHmwjB",
-        "outputId": "4bd11e66-7fca-46c0-af43-1f04a5b2c78d"
+        "outputId": "38a98c73-6bce-418f-dabf-5311980ac56a"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,9 +411,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M2BEnKB2mZAs",
-        "outputId": "2c8c75f7-cd1b-4e92-bec5-3f1fd7169a8c"
+        "outputId": "e85f5e07-2cab-4920-cb88-6bed3da850a0"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,9 +448,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4b7f6897-907d-4e82-9571-e321001af34f"
+        "outputId": "1d5d544a-2a36-4fef-bc46-8894e6b0fe71"
       },
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -486,9 +486,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1d7ebaf2-aba8-4473-f6ab-92c4fba2d677"
+        "outputId": "99890d42-2260-4000-c4b7-3ce2d1cb9cbb"
       },
-      "execution_count": 21,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -533,9 +533,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2dfdfc26-70db-4bb2-b57e-638eaa782d02"
+        "outputId": "876f1a14-92e7-44cd-e447-735b6e5a364e"
       },
-      "execution_count": 22,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,7 +551,7 @@
       "cell_type": "code",
       "source": [
         "# calculate the mean BMI across our patient sample using the sum() function:\n",
-        "mean_BMI = sum (_pat_details.values()) / len(pat_details)\n",
+        "mean_BMI = sum (pat_details.values()) / len(pat_details)\n",
         "print (mean_BMI)"
       ],
       "metadata": {
@@ -559,9 +559,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1d303fbd-ab4a-4302-c149-fc4288b9cdbb"
+        "outputId": "a71e670c-d5bf-4c1a-c023-37658b981617"
       },
-      "execution_count": 23,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,9 +595,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6fbb1e47-312a-49f8-9482-d4d8c3445da0"
+        "outputId": "7c8687da-7288-4ec0-c6ea-31d3f44e270e"
       },
-      "execution_count": 49,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,9 +638,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "35572ac7-55dc-41e2-ccac-6e89c7c6c8f2"
+        "outputId": "780e6bf3-8614-4c22-b9b5-c68bd25433c2"
       },
-      "execution_count": 36,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -674,9 +674,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ibhk_4HOpLvV",
-        "outputId": "6dffe275-b973-4f4e-8d74-57771cc3b272"
+        "outputId": "98c27cc1-e9b8-49ef-a098-e8a5337bea73"
       },
-      "execution_count": 38,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,9 +738,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "23f9f011-ae41-4ae7-dfa3-6bbd44307b32"
+        "outputId": "dbe3044e-6778-4616-fb6a-c14f3cf203c6"
       },
-      "execution_count": 39,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,9 +773,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s1omIUofo2jB",
-        "outputId": "7e6d2ddb-5c90-4eba-b5a7-81e31ef3c210"
+        "outputId": "e58b54d9-22c2-4230-dd60-60878d9cec52"
       },
-      "execution_count": 40,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -800,29 +800,29 @@
     {
       "cell_type": "code",
       "source": [
-        "for id,record in pats.items():\n",
-        "  print (data)\n",
-        "  #total_bmi =+ BMILastVisit\n",
-        "  #mean_bmi = total_bmi/len(pats)\n"
+        "total_bmi = 0\n",
+        "print(len(pats))\n",
+        "for x in pats.values():\n",
+        "  bmi = x['BMILastVisit']\n",
+        "  total_bmi = bmi + total_bmi\n",
+        "mean_bmi = total_bmi/len(pats)\n",
+        "print (mean_bmi)\n"
       ],
       "metadata": {
         "id": "xeIegmlEPyEy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c926d44a-a8be-46d5-913d-ecd0cff9aee1"
+        "outputId": "7d9f9fe6-4df8-4ea1-c44e-0f017afdbed2"
       },
-      "execution_count": 50,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "28.3\n",
-            "28.3\n",
-            "28.3\n",
-            "28.3\n",
-            "28.3\n"
+            "5\n",
+            "22.22\n"
           ]
         }
       ]
